--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,13 @@
 }
 
 body {
+    min-height: 100vh;
+    display: flex;
     font-family: "Poppins-Regular";
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
+    background: #4CAF50;
 }
 
 .container {
@@ -96,4 +99,82 @@ input[type="text"] {
 
 .user-table tr:hover {
     background-color: #ddd;
+}
+
+/* Cards */
+.card-row {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.card {
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 300px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+    transition: transform 0.2s;
+}
+
+.card-content {
+    background: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.card h2 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+    color: #fff;
+}
+
+.card p {
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+}
+
+.card a.card-link {
+    display: inline-block;
+    background: #4CAF50;
+    color: #fff;
+    padding: 10px 15px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.card a.card-link:hover {
+    background: #fff;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+}
+
+footer {
+    background: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem 0;
+    margin-top: 20px;
+}
+
+footer .social-icons a {
+    color: #fff;
+    margin: 0 10px;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+footer .social-icons a:hover {
+    color: #4CAF50;
 }
